--- a/views/visselection.hbs
+++ b/views/visselection.hbs
@@ -88,6 +88,18 @@
                                 2017
                             </label>
                         </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="2018" id="year" name="year">
+                            <label class="form-check-label" for="2018">
+                                2018
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="2019" id="year" name="year">
+                            <label class="form-check-label" for="2019">
+                                2019
+                            </label>
+                        </div>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
