--- a/views/visselection.hbs
+++ b/views/visselection.hbs
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    {{> navbar}}
     <h1 style="text-align: center;">Visualiser</h1>
     <div class="container mt-4">
         <div class="card">
