--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,93 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{{!-- <head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Accident Viz Dashboard</title>
-
-  {{!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> --}}
-  {{!-- <link rel="stylesheet" href="/style.css"> --}}
-
-</head> --}}
-
 {{> header}}
 
-<body style="padding-top: 56px;">
+<body>
 
   {{> navbar}}
 
   <!-- Page Content -->
   <div class="container">
-
-    <!-- Jumbotron Header -->
-    <header class="jumbotron my-4">
-      <h1 class="display-3">A Warm Welcome!</h1>
-      <p class="lead">Dynamically create your own visualisations and derive insights from them.</p>
-    </header>
-
-    <!-- Page Features -->
-    <div class="row text-center">
-
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Geographical Plots</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Bar Charts</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Pie Charts</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Save Visualisations</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-    <!-- /.row -->
-
+    <p class="flow-text">
+      <b>Why do we need to visualise vehicular accidents' data?</b>
+    </p>
+    <ul class="flow-text">
+      <li style="list-style: circle;">Approximately 1.35 million people die each year as a result of road traffic crashes.</li>
+      <li style="list-style: circle;">The 2030 Agenda for Sustainable Development has set an ambitious target of halving the global number of deaths and injuries from road traffic crashes by 2020.</li>
+      <li style="list-style: circle;">Road traffic crashes cost most countries 3% of their gross domestic product.</li>
+      <li style="list-style: circle;">More than half of all road traffic deaths are among vulnerable road users: pedestrians, cyclists, and motorcyclists.</li>
+      <li style="list-style: circle;">93% of the world's fatalities on the roads occur in low- and middle-income countries, even though these countries have approximately 60% of the world's vehicles.</li>
+      <li style="list-style: circle;">Road traffic injuries are the leading cause of death for children and young adults aged 5-29 years.</li>
+    </ul>
+    <br>
+    <br>
+    <hr>
+    <p class="flow-text">
+      The only way we're going to understand why accidents happen, and how to prevent them from happenining and save human life,
+      is to visualise the data, understand and analyse it to reduce this huge number. We've built this data-driven project in order
+      to prevent cause of human life, and to play our little part in serving the community.
+    </p>
   </div>
   <!-- /.container -->
-
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
-    </div>
-    <!-- /.container -->
-  </footer>
-
-  <!-- Bootstrap core JavaScript -->
 
 </body>
 
