--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,11 +1,11 @@
 <nav>
   <div class="nav-wrapper black">
-    <a href="#!" class="brand-logo" style="padding-left: 10px;"><i class="material-icons">cloud</i>Accident Viz</a>
+    <a href="#!" class="brand-logo" style="padding-left: 10px;"><i class="material-icons">poll</i>Accident Viz</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="index.html"><i class="material-icons left">home</i>Home</a></li>
-      <li><a href="/login">Login</a></li>
-      <li><a href="/about">Register</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="/"><i class="material-icons left">home</i>Home</a></li>
+      <li><a href="/login"><i class="material-icons left">login</i>Login</a></li>
+      <li><a href="/about">Register<i class="material-icons left">person_add</i></a></li>
+      {{!-- <li><a href="#">About</a></li> --}}
 
     </ul>
   </div>
