--- a/views/partials/logged_in_navbar.hbs
+++ b/views/partials/logged_in_navbar.hbs
@@ -4,11 +4,8 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="/"><i class="material-icons left">home</i>Home</a></li>
       {{!-- {{#isNull this}} --}}
-      <li><a href="/login"><i class="material-icons left">login</i>Login</a></li>
-      <li><a href="/register">Register<i class="material-icons left">person_add</i></a></li>
-      {{!-- {{else}} --}}
-      {{!-- <li><a href="#">{{this.email}}<i class="material-icons left">person</i></a></li> --}}
-      {{!-- {{/isNull}} --}}
+      <li><a href="#">{{this.email}}<i class="material-icons left">person</i></a></li>
+        <li><a href="/"><i class="material-icons left">logout</i>Logout</a></li>
       </ul>
   </div>
 </nav>
