--- a/views/user_home.hbs
+++ b/views/user_home.hbs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
-    <title>Road Accident Visualiser</title>
-</head>
+
+{{> header}}
+
 <body>
-    <h1>Welcome User!!</h1>
-    <h1>Saved Visualisations list will be here</h1>
+
+  {{> logged_in_navbar email = email}}
+
+  <!-- Page Content -->
+  <div class="container">
+      {{email}}
     <button id="visbutton" class="btn btn-primary">Create a Visualisation</button>
 
     <script type="text/javascript">
@@ -17,5 +17,9 @@
             location.href = "/visselection";
         };
     </script>
+  </div>
+  <!-- /.container -->
+
 </body>
+
 </html>
