testing user id

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -12,7 +12,7 @@
              <p>
                 Login - pick up where you left off.
             </p>
-          <form class="col s12" action="/users/login" method="post" style="padding-top: 40px;">
+          <form class="col s12" action="/submitlogin" method="post" style="padding-top: 40px;">
             <div class='row'>
               <div class='col s12'>
               </div>
