--- a/views/register.hbs
+++ b/views/register.hbs
@@ -12,7 +12,7 @@
              <p>
                  Register - join us in changing our understanding of the world.
             </p>
-          <form class="col s12" action="/users/register" method="post" style="padding-top: 40px;">
+          <form class="col s12" action="/submitregister" method="post" style="padding-top: 40px;">
             <div class='row'>
               <div class='col s12'>
               </div>
