--- a/views/chart.hbs
+++ b/views/chart.hbs
@@ -20,7 +20,7 @@
     {{!-- {{data}} --}}
 </head>
 <body >
-    {{> logged_in_navbar}}
+    {{> logged_in_navbar email = email}}
     <div class="container mt-4" style="background-color: aliceblue;">
         <div id="map" style="width: 100%; height: 500px; border: 1px solid rgb(0, 0, 0);"></div>
         <canvas id="myChart"></canvas>
