--- a/views/user_home.hbs
+++ b/views/user_home.hbs
@@ -162,6 +162,7 @@
   <script>
          $(document).ready(function() {
             $('select').material_select();
+            document.querySelectorAll('.select-wrapper').forEach(t => t.addEventListener('click', e=>e.stopPropagation()));
          });
   </script>
 </body>
