--- a/views/chart.hbs
+++ b/views/chart.hbs
@@ -85,7 +85,9 @@
         //console.log(records.map(toList1));
         if (charttype == 'map'){
             var chart = document.getElementById("myChart");
+            var chartdwnldbtn = document.getElementById("dwnldimg");
             chart.style.display = "none";
+            chartdwnldbtn.style.display = "none";
             // See post: http://asmaloney.com/2015/06/code/clustering-markers-on-leaflet-maps
             
             var map = L.map( 'map', {
