--- a/views/user_home.hbs
+++ b/views/user_home.hbs
@@ -70,12 +70,12 @@
                     </div>
                     <div class="form-group">
                          <label for="year">Show Years</label>
-                         <div>
+                         {{!-- <div>
                             <label>
                               <input type="checkbox" type="checkbox" value="all" id="year" name="year" onclick="eventCheckBox()"/>
                               <span>All years</span>
                             </label>
-                        </div>
+                        </div> --}}
                         <div>
                             <label>
                               <input type="checkbox" type="checkbox" value="2016" id="2016" name="year" />
