Form Commit Stable

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -35,7 +35,7 @@
             <br />
             <center>
               <div class='row'>
-                <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect indigo'>Login</button>
+                <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect indigo'>REGISTER</button>
               </div>
             </center>
           </form>
