--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -6,6 +6,7 @@
       {{!-- {{#isNull this}} --}}
       <li><a href="/login"><i class="material-icons left">login</i>Login</a></li>
       <li><a href="/register">Register<i class="material-icons left">person_add</i></a></li>
+      <li><a href="/idx">Add to the Database</a></li>
       {{!-- {{else}} --}}
       {{!-- <li><a href="#">{{this.email}}<i class="material-icons left">person</i></a></li> --}}
       {{!-- {{/isNull}} --}}
