--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,38 +1,18 @@
-<--ADD ACCIDENT VALUES -->
 <!doctype html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-
-  <title>INSERTION FORM</title>
-  <meta name="description" content="INSERTION FORM">
-  <meta name="author" content="SitePoint">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-  <link rel="stylesheet" href='./styling.css'>
-
-</head>
+{{> header}}
 
 <body>
-  <nav>
-    <h4> INSERTION FORM </h4>
-    <ul>
-      <li> <a href="/"> BACK HOME </a></li>
-      <li> <a href="/add"> ADD ENTRIES </a></li>
-    </ul>
-  </nav>
+ {{> logged_in_navbar email = email}}
 
-  <div class="container mt-4">
-    <div class="card" style="width: 36rem;">
-        <div class="card-header">
-            <h2> <b> ADD VALUES TO THE DATABASE (ADMINISTRATOR ACCESS) </b></h2>
-        </div>
-        <div class="card-body">
+  <div class="container">
+   
             
             <form action="/auth/add" method="POST">
                 
                 <hr> <b> ACCIDENT INFORMATION </b> <hr> 
+                
                 <div class="dropdown"> SELECT YEAR: <br>
                     <select class="btn btn-secondary dropdown-toggle" type="button" id="year_id" name="year_id" data-toggle="dropdown">
                         <option value='2020' > 2020  </option>
@@ -43,13 +23,15 @@
                     </select>
                 </div>
                 <br>
-                <div class="form-group">
-                    <label for="longitude">Longitude: </label>
-                    <input type="text" class="form-control" id="longitude" name="longitude">
-                </div>
-                <div class="form-group">
-                    <label for="latitude">Latitude: </label>
-                    <input type="text" class="form-control" id="latitude" name="latitude">
+                <div class="row">
+                    <div class="form-group col s6">
+                        <label for="longitude">Longitude: </label>
+                        <input type="text" class="form-control" id="longitude" name="longitude">
+                    </div>
+                    <div class="form-group col s6">
+                        <label for="latitude">Latitude: </label>
+                        <input type="text" class="form-control" id="latitude" name="latitude">
+                    </div>
                 </div>
 
                 <div class="dropdown"> SELECT ACCIDENT SEVERITY: <br>
@@ -222,17 +204,16 @@
                 <br><br>
                 <button type="submit" class="btn btn-primary">ADD ENTRIES</button><hr>
 
-            </form><br>
-        </div>
-    </div>
+            </form>
+        
 
     {{#if message }}
         <h4 class="msg_not_found"> {{message}} </h4>
     {{/if}}
     
   </div>
-  <script src="js/scripts.js"></script>
-
+  <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>           
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 
 </body>
