--- a/views/add_casualties.hbs
+++ b/views/add_casualties.hbs
@@ -1,26 +1,10 @@
 <!doctype html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-
-  <title>INSERTION FORM</title>
-  <meta name="description" content="INSERTION FORM">
-  <meta name="author" content="SitePoint">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-  <link rel="stylesheet" href='./styling.css'>
-
-</head>
+{{> header}}
 
 <body>
-  <nav>
-    <h4> FORM </h4>
-    <ul>
-      <li> <a href="/"> BACK HOME </a></li>
-      <li> <a href="/add"> ADD ENTRIES </a></li>
-    </ul>
-  </nav>
+  {{> logged_in_navbar}}
 
   <div class="container mt-4">
     <div class="card" style="width: 54rem;">
