redirect user_home added

--- a/views/add_casualties.hbs
+++ b/views/add_casualties.hbs
@@ -4,7 +4,7 @@
 {{> header}}
 
 <body>
-  {{> logged_in_navbar}}
+  {{> logged_in_navbar email = email}}
 
   <div class="container mt-4">
     <div class="card" style="width: 54rem;">
