--- a/views/register.hbs
+++ b/views/register.hbs
@@ -50,7 +50,10 @@
         <div class="col s4"></div>
 
         </div>
-        
+      <script>
+      if('{{{error}}}' != null)
+      alert('{{{error}}}');
+      </script>
     <script>
       function pass_validation()
       {
