--- a/views/register.hbs
+++ b/views/register.hbs
@@ -51,7 +51,7 @@
 
         </div>
       <script>
-      if('{{{error}}}' != null)
+      if('{{{error}}}' != null && '{{{error}}}' != '')
       alert('{{{error}}}');
       </script>
     <script>
