--- a/views/add.hbs
+++ b/views/add.hbs
@@ -9,7 +9,7 @@
   <div class="container">
    
             
-            <form action="/auth/add" method="POST">
+            <form action="/add" method="POST">
                 
                 <hr> <b> ACCIDENT INFORMATION </b> <hr> 
                 
@@ -212,6 +212,10 @@
     {{/if}}
     
   </div>
+  <script>
+      if('{{{error}}}' != null && '{{{error}}}' != '')
+      alert('{{{error}}}');
+      </script>
   <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>           
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
