--- a/views/add_casualties.hbs
+++ b/views/add_casualties.hbs
@@ -13,7 +13,7 @@
         </div>
         <div class="card-body">
             
-            <form action="/auth/add_casualties" method="POST">
+            <form action="/add_casualties" method="POST">
                 
                 <hr> <b> GENERAL INFORMATION </b> <hr> 
                 <!--
@@ -161,7 +161,10 @@
     
   </div>
   <script src="js/scripts.js"></script>
-
+<script>
+      if('{{{error}}}' != null && '{{{error}}}' != '')
+      alert('{{{error}}}');
+      </script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 
 </body>
