--- a/views/login.hbs
+++ b/views/login.hbs
@@ -45,7 +45,7 @@
         </div>
         
       <script>
-      if('{{{error}}}' != null)
+      if('{{{error}}}' != null && '{{{error}}}' != '')
       alert('{{{error}}}');
       </script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
